--- a/src/scss/application.scss
+++ b/src/scss/application.scss
@@ -1,8 +1,8 @@
 @charset "UTF-8";
 // Foundation Components
 @import
+  "icons",
   "bourbon/bourbon",
   "neat/neat",
   "base/base",
-  "style",
-  "icons";
+  "style";
