--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -352,7 +352,7 @@ button {
     color: white;
   }
   &.panel {
-    background-color: $heading-font-color;
+    background-color: #999;
   }
 }
 // Line Behind Text
