--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -21,8 +21,8 @@ $cube-color-2: #cf00ff;
 $cube-color-3: #002fff;
 $button-edge: shade( $primary-color, 50%);
 $wrap-padding: 14em;
-$small: 640;
-$medium: 767px;
+$small: 640px;
+$medium: 769px;
 $large: 1024px;
 
 body {
