--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -157,6 +157,7 @@ svg {
   width: 100%;
   height: 6.5em;
   font-family: $sans-serif;
+  z-index:9999;
   h1 {
     display: inline;
     margin: 0;
@@ -168,8 +169,15 @@ svg {
   left: 2em;
   color: $base-font-color;
   font-size: 1.6rem;
+  z-index: 9999;
   span {
     color: $primary-color;
+  }
+  &.active {
+    color:white;
+    span {
+      color: white;
+    }
   }
 }
 //Footer
@@ -232,13 +240,9 @@ nav {
       }
     }
     ul {
-      width: 50vw;
-      text-align: right;
+      width: 100vw;
+      text-align: center;
       font-size: 3em;
-      @include media(max-width $medium) {
-        width: 100vw;
-        text-align: center;
-      }
       a {
         color: white;
       }
@@ -254,6 +258,16 @@ nav {
   left: 0;
   bottom: 20px;
 }
+// Message
+.contact {
+  height: 100%;
+  width: 100%;
+  padding: 0 20%;
+  h2 {
+    text-align: center;
+  }
+}
+
 // Message
 .message {
   display: table-cell;
@@ -436,6 +450,11 @@ button {
 }
 // Article Page
 .article {
+  @include media(max-width $medium) {
+    h3 {
+      font-size: 1.35em;
+    }
+  }
   h4 {
     margin: 3em 0 0.5em;
   }
@@ -489,7 +508,6 @@ p.author {
   display: none;
   padding-top: 50px;
   width: 100%;
-  z-index: 9999;
   @include perspective(1000px);
   @include perspective-origin(50% 50%);
   @include media($medium) {
@@ -504,7 +522,6 @@ p.author {
   width: $cube-translate-z * 2;
   margin: 0 auto;
   cursor: pointer;
-  z-index: 9999;
   @include transition(transform 2s linear);
   -webkit-transform-style: preserve-3d;
   -moz-transform-style: preserve-3d;
