--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -30,14 +30,14 @@ body {
   opacity:0;
   .mast-head {
     h1 {
-     @include transition(all .25s ease .8s);
+     @include transition(all .45s ease .7s);
      position:relative;
      left:-200px;
    }
   }
   &.tween {
     opacity:1;
-    @include transition(all .8s ease-in);
+    @include transition(all .7s ease-in);
     .mast-head {
       h1 {
         left:0px;
@@ -45,6 +45,25 @@ body {
       }
     }
   }
+}
+
+.content_div {
+    box-shadow:0 0 10px;
+    border:10px solid black;
+    height:800px;
+    left:-1000px;
+    width:100%;
+    -webkit-animation:slide_in 800ms ease-out forwards;
+    position:absolute;
+    box-sizing:border-box;
+}
+@-webkit-keyframes slide_in{
+    0% {
+        left:-1000px;
+    }
+    100% {
+        left:0px;
+    }
 }
 
 // Typography
@@ -108,6 +127,16 @@ svg {
     }
   }
 }
+.head {
+  background: rgb(205,205,205); /* Old browsers */
+  background: -moz-linear-gradient(top,  rgba(205,205,205,1) 0%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(205,205,205,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top,  rgba(205,205,205,1) 0%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+  background: -o-linear-gradient(top,  rgba(205,205,205,1) 0%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+  background: -ms-linear-gradient(top,  rgba(205,205,205,1) 0%,rgba(255,255,255,1) 100%); /* IE10+ */
+  background: linear-gradient(to bottom,  rgba(205,205,205,1) 0%,rgba(255,255,255,1) 100%); /* W3C */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cdcdcd', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+}
 .wrap {
   padding: $wrap-padding 0;
   @include outer-container;
@@ -116,6 +145,9 @@ svg {
   }
   .head & {
     padding: 16em 0 8em;
+  }
+  .contact & {
+    padding: 10em 0;
   }
   article & {
     padding: 8em 0;
@@ -166,10 +198,11 @@ svg {
 .site-logo {
   position: absolute;
   top: 1.25em;
-  left: 2em;
+  left: 1.25em;
   color: $base-font-color;
   font-size: 1.6rem;
   z-index: 9999;
+  width:300px;
   span {
     color: $primary-color;
   }
@@ -183,7 +216,7 @@ svg {
 //Footer
 footer {
   .icon {
-    color: white;
+    color: $paragraph-font-color;
     font-size: 1.5em;
   }
   .icon-copyright {
@@ -191,7 +224,7 @@ footer {
   }
 }
 p.copy {
-  color: white;
+  color: $paragraph-font-color;
   font-family: $sans-serif;
   font-weight: 100;
   font-size: 1em;
@@ -226,8 +259,8 @@ nav {
   &.primary {
     background: $primary-color;
     position: fixed;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     opacity: 0;
     padding-right: 0.6em;
     z-index: -1;
@@ -309,6 +342,99 @@ nav {
     }
   }
 }
+// Browser
+.browser {
+  background:transparent;
+  border-top-right-radius:4px;
+  border-top-left-radius:4px;
+  box-shadow: 0 .25em 1em #b9b9b9;
+  border-bottom:1px solid rgba(160,160,160,.4);
+  border-right:1px solid rgba(160,160,160,.4);
+  border-left:1px solid rgba(160,160,160,.4);
+  position:relative;
+  margin: 0 auto;
+  height:800px;
+  overflow:hidden;
+  margin-bottom:6em;
+  img {
+    width:100%;
+  }
+  &:before {
+    background-color:#f6f6f6;
+    color:#555;
+    height:2em;
+    display:block;
+    content:'Site Title Here';
+    line-height:2em;
+    font-size:.75em;
+    text-align:center;
+    border-top-right-radius:4px;
+    border-top-left-radius:4px;
+    border-bottom:1px solid rgba(160,160,160,.3);
+    text-shadow: 0 0 1px #b9b9b9;
+  }
+  // &:hover:after {
+  &:after {
+    background-color:#f6f6f6;
+    color:#555;
+    display:inline-block;
+    content:'Work done at Brunello | ma-ena.org';
+    line-height:1em;
+    font-size:.65em;
+    text-align:left;
+    border-top-right-radius:4px;
+    position:absolute;
+    padding:4px 10px;
+    bottom:0px;
+    left:0px;
+    border-right:1px solid rgba(160,160,160,.4);
+    border-top:1px solid rgba(160,160,160,.4);
+  }
+  span {
+    background-color:#fc5857;
+    border-radius:50%;
+    box-shadow: inset 0 0 2px #b9b9b9;
+    border:1px solid shade(#fc5857, 10%);
+    height:11px;
+    width:11px;
+    position:absolute;
+    top:6px;
+    left:6px;
+    content:'';
+    z-index:999;
+    display:block;
+    &:after {
+      background-color:#35cd41;
+      border-radius:50%;
+      box-shadow: inset 0 0 2px #b9b9b9;
+      border:1px solid shade(#35cd41, 10%);
+      height:11px;
+      width:11px;
+      content:'';
+      z-index:999;
+      display:block;
+      position:relative;
+      top: -12px;
+      left: 27px;
+    }
+    &:before {
+      background-color:#febe2f;
+      border-radius:50%;
+      box-shadow: inset 0 0 2px #b9b9b9;
+      border:1px solid shade(#febe2f, 10%);
+      height:11px;
+      width:11px;
+      content:'';
+      z-index:999;
+      display:block;
+      position:relative;
+      left: 13px;
+      top: -1px;
+    }
+
+  }
+
+}
 // Split Panel
 .split-panel {
   text-align: center;
@@ -374,15 +500,12 @@ nav {
 // Button
 button {
   // Default
-  border-radius: 8px;
-  padding: 0.35em 1em;
+  border-radius: 4px;
   line-height: 1.6;
+  padding: 0.6em 1em;
   font-size: 1rem;
   outline: none;
   border: 0;
-  border-bottom: 3px solid $button-edge;
-  -webkit-box-shadow: inset 0 -2px $button-edge;
-  box-shadow: inset 0 -2px $button-edge;
   &.active {
     -webkit-box-shadow: none;
     box-shadow: none;
@@ -390,9 +513,12 @@ button {
   }
   &.primary-menu-btn {
     background-color: $primary-color;
-    $text-color: white;
-    color: $text-color;
+    border-bottom: 3px solid $button-edge;
+    -webkit-box-shadow: inset 0 -2px $button-edge;
+    box-shadow: inset 0 -2px $button-edge;
+    color: white;
     position: absolute;
+    padding: 0.35em 1em;
     top: 2em;
     right: 2em;
     z-index: 99999;
@@ -407,22 +533,19 @@ button {
   text-align: center;
   padding: 2em;
   a {
-    color: white;
-  }
-  &.panel {
-    background-color: #333;
+    color: $paragraph-font-color;
   }
 }
 // Line Behind Text
 .line-behind-text {
-  border-bottom: 1px solid white;
+  border-bottom: 1px solid $paragraph-font-color;
   text-align: center;
   width: 30%;
   min-width: 200px;
   margin: 0 auto 4.5em;
   h2 {
-    background: $heading-font-color;
-    color: $off-white-color;
+    background: #f4f4f4;
+    color: $paragraph-font-color;
     display: inline-block;
     font-size: 1rem;
     padding: 0 10px;
