--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -24,9 +24,11 @@ $wrap-padding: 14em;
 $small: 640px;
 $medium: 769px;
 $large: 1024px;
+$nav-bg-color: $primary-color;
+$border-radius:4px;
 
 body {
-  background-color:$primary-color;
+  background-color:$nav-bg-color;
   opacity:0;
   .mast-head {
     h1 {
@@ -34,6 +36,9 @@ body {
      position:relative;
      left:-200px;
    }
+  }
+  .panel {
+    @include transform(translateY(50vh));
   }
   &.tween {
     opacity:1;
@@ -44,9 +49,12 @@ body {
         opacity:1;
       }
     }
+    .panel {
+      @include transition(all .7s ease-in);
+      @include transform(translateY(0px));
+    }
   }
 }
-
 .content_div {
     box-shadow:0 0 10px;
     border:10px solid black;
@@ -99,11 +107,13 @@ svg {
   height: 100vh;
   display: table;
 }
-
 .panel {
   width: 100vw;
   background-color: $panel-even-color;
   @include clearfix;
+  &.grey {
+    background-color:#cdcdcd !important;
+  }
   &:nth-child(odd) {
     background-color: $panel-odd-color;
   }
@@ -252,12 +262,15 @@ p.copy {
 }
 .headroom--unpinned {
   transform: translateY(-100%);
+  &.active {
+    transform: translateY(0);
+  }
 }
 
 // Navigation
 nav {
   &.primary {
-    background: $primary-color;
+    background: $nav-bg-color;
     position: fixed;
     width: 100vw;
     height: 100vh;
@@ -265,9 +278,9 @@ nav {
     padding-right: 0.6em;
     z-index: -1;
     display: none;
-    @include transition(opacity 0.5s ease-in);
     // Overlay
     &.overlay {
+      @include transition(opacity .5s ease-in);
       display: table;
       opacity: 1;
       z-index: 999;
@@ -305,7 +318,6 @@ nav {
     text-align: center;
   }
 }
-
 // Message
 .message {
   display: table-cell;
@@ -320,7 +332,7 @@ nav {
     margin: 0 auto;
   }
   h2 {
-    font-size: 4.75em;
+    font-size: 5.65em;
     line-height: 1;
     margin-bottom: 0.35em;
     @include media(max-width $medium) {
@@ -500,7 +512,7 @@ nav {
 // Button
 button {
   // Default
-  border-radius: 4px;
+  border-radius: $border-radius;
   line-height: 1.6;
   padding: 0.6em 1em;
   font-size: 1rem;
@@ -513,27 +525,113 @@ button {
   }
   &.primary-menu-btn {
     background-color: $primary-color;
-    border-bottom: 3px solid $button-edge;
-    -webkit-box-shadow: inset 0 -2px $button-edge;
-    box-shadow: inset 0 -2px $button-edge;
     color: white;
     position: absolute;
     padding: 0.35em 1em;
     top: 2em;
     right: 2em;
     z-index: 99999;
-    &.active {
-      background-color: white;
-      color: $primary-color;
+    &:before {
+      content: '';
+      position: absolute;
+      top:5px;
+      left:1px;
+      background-color: rgba(0, 0, 0, .12);
+      -webkit-transform: scale(1, 1.05) skew(6deg, 0deg);
+      -ms-transform: scale(1, 1.05) skew(6deg, 0deg);
+      transform: scale(1, 1.05) skew(6deg, 0deg);
+      display: block;
+      width: 90px;
+      height: 40px;
+      border-radius:$border-radius;
+      .active & {
+        -webkit-transform: scale(.95) skew(2deg, 0deg);
+        -ms-transform: scale(.95) skew(2deg, 0deg);
+        transform: scale(.95) skew(2deg, 0deg);
+      }
+    }
+    &:after {
+      position: absolute;
+      width:inherit;
+      display:block;
+      content: 'MENU';
+      padding: 0.35em 1em;
+      background-color: $primary-color;
+      top:0px;
+      left:0px;
+      border-radius: 4px;
+      border-bottom: 3px solid $button-edge;
+      -webkit-box-shadow: inset 0 -2px $button-edge;
+      box-shadow: inset 0 -4px $button-edge;
+      .active & {
+        background-color: white;
+        color: $primary-color;
+        box-shadow: inset 0 -2px $button-edge;
+      }
     }
   }
 }
+
+
+/* Wapasha */
+.btn {
+  font-weight:bold;
+}
+[class^="cta-"], [class*=" cta-"] {
+  background: $primary-color;
+	color: #fff;
+  display:inline-block;
+  padding:1em 3em;
+	-webkit-transition: background-color 0.3s, color 0.3s;
+	transition: background-color 0.3s, color 0.3s;
+  &:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 2px solid $primary-color;
+    z-index: -1;
+    border-radius: inherit;
+    opacity: 0;
+    -webkit-transform: scale3d(0.6, 0.6, 1);
+    transform: scale3d(0.6, 0.6, 1);
+    -webkit-transition: -webkit-transform 0.3s, opacity 0.3s;
+    transition: transform 0.3s, opacity 0.3s;
+    -webkit-transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+    transition-timing-function: cubic-bezier(0.75, 0, 0.125, 1);
+  }
+  &:hover {
+    background-color: transparent;
+    color: #333;
+    &:before {
+      -webkit-transform: scale3d(1, 1, 1);
+      transform: scale3d(1, 1, 1);
+      opacity: 1;
+    }
+    span {
+      border-bottom: 3px solid $primary-color;
+    }
+  }
+
+}
+.cta-process::before {
+  // background:url('../../img/preview.jpg');
+}
+.cta-work::before {
+  // background:url('../../img/preview.jpg');
+}
+
 // Credits
 .credits {
   text-align: center;
   padding: 2em;
   a {
     color: $paragraph-font-color;
+    &:hover {
+      color: shade($paragraph-font-color, 60%);
+    }
   }
 }
 // Line Behind Text
@@ -730,4 +828,166 @@ p.author {
       background-color: $cube-color-1;
     }
   }
+}
+
+
+.input {
+	position: relative;
+	z-index: 1;
+	display: inline-block;
+	margin: 1em;
+	width: 100%;
+	vertical-align: top;
+}
+.input__field {
+	position: relative;
+	display: block;
+	float: right;
+	padding: 0.8em;
+	width: 60%;
+	border: none;
+	border-radius: 0;
+	background: #f0f0f0;
+	color: #aaa;
+	font-weight: 400;
+	font-family: "Avenir Next", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	-webkit-appearance: none; /* for box shadows to show on iOS */
+}
+.input__field:focus {
+	outline: none;
+}
+.input__label-content {
+	position: relative;
+	display: block;
+	padding: 1.6em 0;
+	width: 100%;
+}
+.graphic {
+	position: absolute;
+	top: 0;
+	left: 0;
+	fill: none;
+}
+.icon {
+	color: #ddd;
+	font-size: 150%;
+}
+/* Nao */
+.input--nao {
+	overflow: hidden;
+	padding-top: 1em;
+}
+
+.input__field--nao {
+	padding: 0.5em 0em 0.25em;
+	width: 100%;
+	background: transparent;
+	color: #9da8b2;
+	font-size: 1.25em;
+}
+.input__label--nao {
+	position: absolute;
+	top: 1em;
+	font-size: 1em;
+	left: 0;
+	display: block;
+	width: 100%;
+	text-align: left;
+	padding: 0em;
+	pointer-events: none;
+	-webkit-transform-origin: 0 0;
+	transform-origin: 0 0;
+	-webkit-transition: -webkit-transform 0.2s 0.15s, color 1s;
+	transition: transform 0.2s 0.15s, color 1s;
+	-webkit-transition-timing-function: ease-out;
+	transition-timing-function: ease-out;
+}
+.graphic--nao {
+	stroke: #92989e;
+  padding:0px;
+	pointer-events: none;
+	-webkit-transition: -webkit-transform 0.7s, stroke 0.7s;
+	transition: transform 0.7s, stroke 0.7s;
+	-webkit-transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+	transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+}
+.input__field--nao:focus + .input__label--nao,
+.input--filled .input__label--nao {
+	color: #333;
+	-webkit-transform: translate3d(0, -1.25em, 0) scale3d(0.75, 0.75, 1);
+	transform: translate3d(0, -1.25em, 0) scale3d(0.75, 0.75, 1);
+}
+.input__field--nao:focus ~ .graphic--nao,
+.input--filled .graphic--nao {
+	stroke: #333;
+	-webkit-transform: translate3d(-66.6%, 0, 0);
+	transform: translate3d(-66.6%, 0, 0);
+}
+
+
+/* grid */
+.grid {
+	margin: 0;
+	padding: 0;
+	list-style: none;
+	position: relative;
+	width: 100%;
+  float:left;
+}
+.grid li {
+	position: relative;
+	float: left;
+	font-size: 13em;
+	line-height: 1;
+	max-height: 190px;
+	text-align: center;
+	width: auto;
+}
+/* Common styles for the letters */
+.grid li span {
+	display: inline-block;
+	font-weight: 900;
+	line-height: 1;
+	position: relative;
+	color: #212121;
+	-webkit-transform-style: preserve-3d;
+	-ms-transform-style: preserve-3d;
+	transform-style: preserve-3d;
+	z-index: 1;
+}
+.grid li span:before,
+.grid li span:after {
+	position: absolute;
+	content: attr(data-letter);
+	line-height: inherit;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	z-index: 2;
+}
+.grid li span:before {
+	text-shadow: none;
+	color: hsla(0, 0%, 0%, 0.1);
+}
+.ot-letter-bottom span { text-shadow: 1px 4px 4px #212121, 1px 4px 4px #333 }
+.ot-letter-bottom span:after { color: #333; }
+
+/* Down */
+.ot-letter-bottom span:before,
+.ot-letter-bottom span:after {
+	-webkit-transform-origin: 50% 0;
+	-ms-transform-origin: 50% 0;
+	transform-origin: 50% 0;
+}
+.ot-letter-bottom span:before {
+	-webkit-transform: scale(1,1.05) skew(8deg,0deg);
+	-ms-transform: scale(1,1.05) skew(8deg,0deg);
+	transform: scale(1,1.05) skew(8deg,0deg);
+}
+.ot-letter-bottom span:after {
+	// text-shadow: 0px -1px 0px hsla(360, 100%, 100%, 0.1), 0px 3px 1px hsla(0, 0%, 0%, 0.4);
+	-webkit-transform: rotateX(20deg);
+	-ms-transform: rotateX(20deg);
+	transform: rotateX(20deg);
 }
