--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -18,7 +18,7 @@
 
 // Typography and Elements
 @import "typography";
-@import "forms";
+// @import "forms";
 @import "tables";
 @import "lists";
-@import "buttons";
+// @import "buttons";
