--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -10,29 +10,23 @@ $primary-color: #09f;
 $secondary-color: #ffcc2f;
 $off-white-color: #f4f4f4;
 $grey-color: #cdcdcd;
-$heading-font-color: #333;
+$heading-font-color: #444;
 $paragraph-font-color: #555;
 $panel-odd-color: $off-white-color;
 $panel-even-color: white;
-$cube-border-color: white;
-$cube-border-size: 10px;
-$cube-color-1: #00ffcf;
-$cube-color-2: #cf00ff;
-$cube-color-3: #002fff;
 $button-edge: shade( $primary-color, 50%);
 $wrap-padding: 14em;
 $small: 640px;
 $medium: 769px;
 $large: 1024px;
 $nav-bg-color: $primary-color;
-$border-radius:4px;
+$border-radius:2px;
 
 body {
   background-color:$nav-bg-color;
   opacity:0;
   .mast-head {
     h1 {
-     @include transition(all .45s ease .7s);
      position:relative;
      left:-200px;
    }
@@ -44,7 +38,12 @@ body {
     opacity:1;
     @include transition(all .7s ease-in);
     .mast-head {
+      .cube {
+        @include transition(all 1s ease-in 1s);
+        opacity:1;
+      }
       h1 {
+        @include transition(all .45s ease .7s);
         left:0px;
         opacity:1;
       }
@@ -98,12 +97,14 @@ h5 {
 p .icon {
   font-size: 0.875em;
 }
-svg {
-  padding: 4em;
+textarea {
+  width: 100%;
+  overflow: auto;
+  background-color: #f4f4f4;
+  border: none;
 }
 //Layout
 .window {
-  width: 100vw;
   height: 100vh;
   display: table;
 }
@@ -111,6 +112,10 @@ svg {
   width: 100vw;
   background-color: $panel-even-color;
   @include clearfix;
+  &.animate {
+    @include transition(height 2s ease-in);
+    height:20vh;
+  }
   &.grey {
     background-color:#cdcdcd !important;
   }
@@ -209,18 +214,13 @@ svg {
   position: absolute;
   top: 1.25em;
   left: 1.25em;
-  color: $base-font-color;
+  color: $heading-font-color;
   font-size: 1.6rem;
   z-index: 9999;
+  padding-left: 1.2em;
   width:300px;
-  span {
-    color: $primary-color;
-  }
   &.active {
     color:white;
-    span {
-      color: white;
-    }
   }
 }
 //Footer
@@ -253,10 +253,17 @@ p.copy {
   .site-logo {
     color: white;
   }
+  .cube > div  {
+    background-color:white;
+  }
   &.headroom--top {
     background-color: transparent;
     .site-logo {
       color: $heading-font-color;
+
+    }
+    .cube > div  {
+      background-color:transparent;
     }
   }
 }
@@ -311,11 +318,13 @@ nav {
 }
 // Message
 .contact {
-  height: 100%;
-  width: 100%;
-  padding: 0 20%;
   h2 {
     text-align: center;
+  }
+  form {
+    max-width: 460px;
+    width: 100%;
+    margin: 0px auto;
   }
 }
 // Message
@@ -324,7 +333,7 @@ nav {
   vertical-align: middle;
   text-align: center;
   height: 100%;
-  width: 100%;
+  width: 100vw;
   padding: 0 5%;
   .collapse & {
     padding-top: $wrap-padding;
@@ -537,17 +546,17 @@ button {
       top:5px;
       left:1px;
       background-color: rgba(0, 0, 0, .12);
-      -webkit-transform: scale(1, 1.05) skew(6deg, 0deg);
-      -ms-transform: scale(1, 1.05) skew(6deg, 0deg);
-      transform: scale(1, 1.05) skew(6deg, 0deg);
+      -webkit-transform: scale(1, 1.05) skew(4deg, 0deg);
+      -ms-transform: scale(1, 1.05) skew(4deg, 0deg);
+      transform: scale(1, 1.05) skew(4deg, 0deg);
       display: block;
-      width: 90px;
+      width: 88px;
       height: 40px;
       border-radius:$border-radius;
       .active & {
-        -webkit-transform: scale(.95) skew(2deg, 0deg);
-        -ms-transform: scale(.95) skew(2deg, 0deg);
-        transform: scale(.95) skew(2deg, 0deg);
+        -webkit-transform: scale(.95) skew(4deg, 0deg);
+        -ms-transform: scale(.95) skew(4deg, 0deg);
+        transform: scale(.95) skew(4deg, 0deg);
       }
     }
     &:after {
@@ -559,7 +568,7 @@ button {
       background-color: $primary-color;
       top:0px;
       left:0px;
-      border-radius: 4px;
+      border-radius: $border-radius;
       border-bottom: 3px solid $button-edge;
       -webkit-box-shadow: inset 0 -2px $button-edge;
       box-shadow: inset 0 -4px $button-edge;
@@ -579,6 +588,7 @@ button {
 }
 [class^="cta-"], [class*=" cta-"] {
   background: $primary-color;
+  border-radius:$border-radius;
 	color: #fff;
   display:inline-block;
   padding:1em 3em;
@@ -592,6 +602,7 @@ button {
     width: 100%;
     height: 100%;
     border: 2px solid $primary-color;
+    border-radius:0px;
     z-index: -1;
     border-radius: inherit;
     opacity: 0;
@@ -604,7 +615,7 @@ button {
   }
   &:hover {
     background-color: transparent;
-    color: #333;
+    color: $heading-font-color;
     &:before {
       -webkit-transform: scale3d(1, 1, 1);
       transform: scale3d(1, 1, 1);
@@ -730,19 +741,28 @@ p.author {
   Author: http://kushagra.me/
 */
 // Cube
-#container {
-  display: none;
-  padding-top: 50px;
-  width: 100%;
+.container {
+  display: block;
+  position: absolute;
+  top: 36px;
+  left: 1.5em;
+  width: auto;
+  z-index:9999;
   @include perspective(1000px);
   @include perspective-origin(50% 50%);
   @include media($medium) {
      display: inline-block;
   }
 }
-#cube {
-  $cube-translate-z: 12px;
-  $cube-translate-z: 140px;
+.cube {
+  $cube-translate-z: 11px;
+  $cube-border-color: white;
+  $cube-border-size: 2px;
+  $cube-color-1: #00ffcf;
+  $cube-color-2: #cf00ff;
+  $cube-color-3: #002fff;
+
+  opacity:0;
   position: relative;
   height: $cube-translate-z * 2;
   width: $cube-translate-z * 2;
@@ -763,10 +783,10 @@ p.author {
     position: absolute;
     height: $cube-translate-z * 2;
     width: $cube-translate-z * 2;
-    opacity: 0.8;
+    opacity: 1;
     background-position: center center;
     border: $cube-border-size solid $cube-border-color;
-    background-color: $secondary-color;
+    background-color: transparent;
   }
   div:nth-child(1) {
     -webkit-transform: translateZ($cube-translate-z);
@@ -774,9 +794,6 @@ p.author {
     -o-transform: translateZ($cube-translate-z);
     -ms-transform: translateZ($cube-translate-z);
     transform: translateZ($cube-translate-z);
-    &:hover {
-      background-color: $cube-color-1;
-    }
   }
   div:nth-child(2) {
     -webkit-transform: rotateY(90deg) translateZ($cube-translate-z);
@@ -784,9 +801,6 @@ p.author {
     -o-transform: rotateY(90deg) translateZ($cube-translate-z);
     -ms-transform: rotateY(90deg) translateZ($cube-translate-z);
     transform: rotateY(90deg) translateZ($cube-translate-z);
-    &:hover {
-      background-color: $cube-color-2;
-    }
   }
   div:nth-child(3) {
     -webkit-transform: rotateY(180deg) translateZ($cube-translate-z);
@@ -794,9 +808,6 @@ p.author {
     -o-transform: rotateY(180deg) translateZ($cube-translate-z);
     -ms-transform: rotateY(180deg) translateZ($cube-translate-z);
     transform: rotateY(180deg) translateZ($cube-translate-z);
-    &:hover {
-      background-color: $cube-color-3;
-    }
   }
   div:nth-child(4) {
     -webkit-transform: rotateY(-90deg) translateZ($cube-translate-z);
@@ -804,9 +815,6 @@ p.author {
     -o-transform: rotateY(-90deg) translateZ($cube-translate-z);
     -ms-transform: rotateY(-90deg) translateZ($cube-translate-z);
     transform: rotateY(-90deg) translateZ($cube-translate-z);
-    &:hover {
-      background-color: $cube-color-2;
-    }
   }
   div:nth-child(5) {
     -webkit-transform: rotateX(-90deg) translateZ($cube-translate-z) rotate(180deg);
@@ -814,9 +822,6 @@ p.author {
     -o-transform: rotateX(-90deg) translateZ($cube-translate-z) rotate(180deg);
     -ms-transform: rotateX(-90deg) translateZ($cube-translate-z) rotate(180deg);
     transform: rotateX(-90deg) translateZ($cube-translate-z) rotate(180deg);
-    &:hover {
-      background-color: $cube-color-3;
-    }
   }
   div:nth-child(6) {
     -webkit-transform: rotateX(90deg) translateZ($cube-translate-z);
@@ -824,9 +829,6 @@ p.author {
     -o-transform: rotateX(90deg) translateZ($cube-translate-z);
     -ms-transform: rotateX(90deg) translateZ($cube-translate-z);
     transform: rotateX(90deg) translateZ($cube-translate-z);
-    &:hover {
-      background-color: $cube-color-1;
-    }
   }
 }
 
@@ -834,8 +836,8 @@ p.author {
 .input {
 	position: relative;
 	z-index: 1;
-	display: inline-block;
-	margin: 1em;
+	display: block;
+  margin: 2em 0;
 	width: 100%;
 	vertical-align: top;
 }
@@ -879,7 +881,7 @@ p.author {
 }
 
 .input__field--nao {
-	padding: 0.5em 0em 0.25em;
+	padding: 0.5em 0em 0.25em 3em;
 	width: 100%;
 	background: transparent;
 	color: #9da8b2;
@@ -887,7 +889,7 @@ p.author {
 }
 .input__label--nao {
 	position: absolute;
-	top: 1em;
+	top: 0;
 	font-size: 1em;
 	left: 0;
 	display: block;
@@ -913,17 +915,89 @@ p.author {
 }
 .input__field--nao:focus + .input__label--nao,
 .input--filled .input__label--nao {
-	color: #333;
+	color: $heading-font-color;
 	-webkit-transform: translate3d(0, -1.25em, 0) scale3d(0.75, 0.75, 1);
 	transform: translate3d(0, -1.25em, 0) scale3d(0.75, 0.75, 1);
 }
 .input__field--nao:focus ~ .graphic--nao,
 .input--filled .graphic--nao {
-	stroke: #333;
+	stroke: $heading-font-color;
 	-webkit-transform: translate3d(-66.6%, 0, 0);
 	transform: translate3d(-66.6%, 0, 0);
 }
+/* Kozakura */
+.input--kozakura {
+	overflow: hidden;
+}
 
+.input__field--kozakura {
+	padding: 0 1em;
+	width: 100%;
+	background: transparent;
+	color: #2F3238;
+	font-size: 1.55em;
+}
+
+.input__label--kozakura {
+	width: 100%;
+	text-align: left;
+	top: 1em;
+	pointer-events: none;
+	overflow: hidden;
+	padding: 0 0.25em;
+	-webkit-transform: translate3d(1em, 2.75em, 0);
+	transform: translate3d(1em, 2.75em, 0);
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: transform 0.3s;
+}
+
+.input__label-content--kozakura {
+	color: #444;
+	padding: 0.4em 0 0.25em;
+	-webkit-transition: -webkit-transform 0.3s;
+	transition: transform 0.3s;
+}
+.graphic--kozakura {
+	fill: #f1f1f1;
+	pointer-events: none;
+	top: 0;
+	bottom: 0px;
+	z-index: -1;
+	-webkit-transition: -webkit-transform 0.7s, fill 0.7s;
+	transition: transform 0.7s, fill 0.7s;
+	-webkit-transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+	transition-timing-function: cubic-bezier(0, 0.25, 0.5, 1);
+}
+
+.input__field--kozakura:focus,
+.input--filled .input__field--kozakura {
+	-webkit-transition: opacity 0s 0.35s;
+	transition: opacity 0s 0.35s;
+	opacity: 1;
+}
+
+.input__field--kozakura:focus + .input__label--kozakura,
+.input--filled .input__label--kozakura {
+	-webkit-transition-delay: 0.15s;
+	transition-delay: 0.15s;
+	-webkit-transform: translate3d(0, 0, 0);
+	transform: translate3d(0, 0, 0);
+}
+
+.input__field--kozakura:focus + .input__label--kozakura .input__label-content--kozakura,
+.input--filled .input__label-content--kozakura {
+	-webkit-transition-delay: 0.15s;
+	transition-delay: 0.15s;
+	-webkit-transform: translate3d(0, -100%, 0);
+	transform: translate3d(0, -100%, 0);
+}
+
+.input__field--kozakura:focus ~ .graphic--kozakura,
+.input--filled .graphic--kozakura {
+	fill: #fff;
+	-webkit-transform: translate3d(-66.6%, 0, 0);
+	transform: translate3d(-66.6%, 0, 0);
+}
 
 /* grid */
 .grid {
@@ -932,31 +1006,33 @@ p.author {
 	list-style: none;
 	position: relative;
 	width: 100%;
-  float:left;
 }
-.grid li {
+.grid div {
 	position: relative;
-	float: left;
-	font-size: 13em;
+	font-size: 18em;
 	line-height: 1;
 	max-height: 190px;
 	text-align: center;
 	width: auto;
+  display: inline-block;
 }
 /* Common styles for the letters */
-.grid li span {
+.grid div span {
 	display: inline-block;
 	font-weight: 900;
 	line-height: 1;
 	position: relative;
-	color: #212121;
+	color: #f1f1f1;
 	-webkit-transform-style: preserve-3d;
 	-ms-transform-style: preserve-3d;
 	transform-style: preserve-3d;
-	z-index: 1;
+	z-index: 2;
+  &:hover {
+    cursor:pointer;
+  }
 }
-.grid li span:before,
-.grid li span:after {
+.grid div span:before,
+.grid div span:after {
 	position: absolute;
 	content: attr(data-letter);
 	line-height: inherit;
@@ -964,14 +1040,19 @@ p.author {
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 2;
 }
-.grid li span:before {
+.break-apart.grid div span:before,
+.break-apart.grid div span:after {
+  position: relative;
+}
+.grid div span:after {
 	text-shadow: none;
 	color: hsla(0, 0%, 0%, 0.1);
+  z-index: -1;
 }
-.ot-letter-bottom span { text-shadow: 1px 4px 4px #212121, 1px 4px 4px #333 }
-.ot-letter-bottom span:after { color: #333; }
+.grid div span:before {
+  color: $heading-font-color;
+}
 
 /* Down */
 .ot-letter-bottom span:before,
@@ -980,12 +1061,12 @@ p.author {
 	-ms-transform-origin: 50% 0;
 	transform-origin: 50% 0;
 }
-.ot-letter-bottom span:before {
+.ot-letter-bottom span:after {
 	-webkit-transform: scale(1,1.05) skew(8deg,0deg);
 	-ms-transform: scale(1,1.05) skew(8deg,0deg);
 	transform: scale(1,1.05) skew(8deg,0deg);
 }
-.ot-letter-bottom span:after {
+.ot-letter-bottom span:before {
 	// text-shadow: 0px -1px 0px hsla(360, 100%, 100%, 0.1), 0px 3px 1px hsla(0, 0%, 0%, 0.4);
 	-webkit-transform: rotateX(20deg);
 	-ms-transform: rotateX(20deg);
