--- a/src/scss/primer/_vars.scss
+++ b/src/scss/primer/_vars.scss
@@ -94,14 +94,14 @@ $max-width: em(1088) !default;
 	- default p text     Copperplate Light, Copperplate Gothic Light, serif
 	- pre and code       Consolas, Lucida Console, Monaco, monospace
  ---------------------------------------------------------------------------------- */
-$sans-serif: 'Montserrat', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-$sans-serif-2: 'Raleway', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
-$serif: 'Palatino Linotype', 'Book Book Antiqua', 'Palatino' , serif;
-// $sans-serif: "Source Sans Pro", sans-serif !default;
-// $sans-serif-2: "Source Sans Pro", sans-serif !default;
 
-$header-font-family: $sans-serif;
-$base-font-family: $sans-serif-2;
+
+$sans-serif: 'Roboto', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+$sans-serif-2: 'Rubik', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
+$serif: 'Palatino Linotype', 'Book Book Antiqua', 'Palatino' , serif;
+
+$base-font-family: $sans-serif;
+$header-font-family: $sans-serif-2;
 
 $base-font-size: 16px;
 
