--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,7 +6,38 @@
 
 /* hood */
 @import "../fonts/feather-icons/style";
-@import "primer/primer";
+
+/* Mixins */
+@import "mixins/bem";
+@import "mixins/clearfix";
+@import "mixins/clickable";
+@import "mixins/containerize";
+@import "mixins/grid";
+@import "mixins/iconize";
+@import "mixins/media-queries";
+@import "mixins/prefix";
+@import "mixins/prefix-keyframes";
+@import "mixins/em";
+@import "mixins/rem";
+@import "mixins/zebra";
+
+/* Vars */
+@import "vars";
+@import "breakpoints";
+
+/* Base */
+@import "base/animate";
+@import "base/grid";
+@import "base/layout";
+@import "base/elements";
+@import "base/spacing";
+@import "base/row-flex";
+@import "base/visibility";
+
+/* Components */
+@import "components/animations/fade-in";
+@import "components/animations/bounce";
+@import "components/animations/hint";
 
 /* custom */
-@import "custom/everhood";
+@import "everhood";
