--- a/src/scss/base/_grid.scss
+++ b/src/scss/base/_grid.scss
@@ -7,8 +7,12 @@ $gutter--desktop: $base-spacing;
 $gutter--mobile: $base-spacing;
 $half: calc(100% / 2);
 
-@media only screen and (min-width: 800px) {
+.column {
+  margin-bottom: grid(4);
+}
 
+@media only screen and (min-width: 800px) {
+  
   .column {
     padding-right: $gutter--desktop;
     width: 100%;
@@ -17,12 +21,6 @@ $half: calc(100% / 2);
       padding-right: 0;
     }
 
-      &.stretch {
-        // margin-left: $gutter
-        // margin-right: $gutter
-      } // pull over margin
-
-    // column - vertical division
     &.full { 
       width: 100%; // 12
     }
@@ -46,15 +44,41 @@ $half: calc(100% / 2);
     &.three-fourth {
       width: calc(100% / 4); // 3
     }
-    
-    &.one-sixth {
-      width: calc(100% / 6);  // 2
-    }
-    
-    &.five-sixth {
-      width: calc(100% / 6);  // 2
-    }
-
   }
+}
 
+@media only screen and (min-width: 800px) {
+  
+  .grid {
+    padding-right: $gutter--desktop;
+    width: 100%;
+
+    &:last-of-type {
+      padding-right: 0;
+    }
+
+    &.full { 
+      width: 100%; // 12
+    }
+
+    &.half {
+      width: calc(100% / 2) // 6
+    }
+    
+    &.one-third {
+      width: calc(100% / 3); // 4
+    }
+    
+    &.two-thirds {
+      width: calc(100% / 1.5); // 4
+    }
+    
+    &.one-fourth {
+      width: calc(100% / 4); // 3
+    }
+    
+    &.three-fourth {
+      width: calc(100% / 4); // 3
+    }
+  }
 }
