--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -37,6 +37,7 @@ $paw: #f37021;
 $light-yellow: #FFFBED !default;
 $red: #FF5050 !default;
 $charcoal: #333333 !default;
+$charcoal: #323e43;
 
 // Theme Colors
 $background-color: $subtle-gray !default;
@@ -51,6 +52,7 @@ $action-color--active: $primary-color-dark !default;
 
 /* Font Colors */
 $base-font-color: #323e43;
+$base-font-color: #555555;
 $base-link-color: $action-color;
 $base-accent-color: $action-color;
 
