--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -1,12 +1,20 @@
 // Page
 $page-margin--desktop: 15vh;
 $page-margin--tablet: 10vh;
-$page-margin--mobile: 5vh;
+$page-margin--mobile: 6vh;
+
+$page-margin--desktop: auto;
+// $page-margin--tablet: auto;
+// $page-margin--mobile: auto;
+
+$max-width: 1004px; // 125.5 x 8 // g(251)
+$page-margin: 20px; // grid(5)
 
 // Fixed Container
 .row {
   margin-left: $page-margin--mobile;
   margin-right: $page-margin--mobile; 
+
 
   @include media($sm-breakpoint) {
     margin-left: $page-margin--tablet;
@@ -16,6 +24,8 @@ $page-margin--mobile: 5vh;
   @include media($md-breakpoint) {
     margin-left: $page-margin--desktop;
     margin-right: $page-margin--desktop;
+    max-width: $max-width;
+    width: 100%;
   }
 
   &.row--collapse {
@@ -34,7 +44,6 @@ $page-margin--mobile: 5vh;
   position: relative;
 
   &.size-to-window  {
-
     @include media($md-breakpoint) {
       width: 100%;
       height: 100vh;
